Adding Jupyter notebook.

--- a/civilizer_cleaning.ipynb
+++ b/civilizer_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,44 @@
     "import json\n",
     "import pandas\n",
     "import cleaning_api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Installing the data cleaning service. (just for the first usage time)\n",
+    "If it is the first time that you want to run the data cleaning service on your system, you need to consider the following instructions:\n",
+    "1. Make sure that you have installed\n",
+    "    - Linux (Ubuntu/Debian recommended)\n",
+    "    - Python 2.7\n",
+    "    - Oracle Java 1.8\n",
+    "    - Apache Ant 1.8.2+\n",
+    "    - PostgreSQL 9.2+\n",
+    "2. Call the following method to install data cleaing tools. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dBoost is installed.\n",
+      "KATARA is installed.\n",
+      "To configure NADEEF, please follow the following steps:\n",
+      "1. Create a database entitled 'nadeef' in the postgres.\n",
+      "2. Inter your postgres username: postgres\n",
+      "3. Inter your postgres password: 1234\n",
+      "NADEEF is installed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaning_api.install_tools()"
    ]
   },
   {
