--- a/civilizer_cleaning.ipynb
+++ b/civilizer_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,8 +148,8 @@
      "text": [
       "The dataset's atributes are:\n",
       "[u'title', u'url', u'model', u'mileage', u'price', u'contact_number', u'vtype', u'brand_name']\n",
-      "Please enter the name of data cleaning tool: nadeef\n",
-      "Please enter the proper parameter list: [[\"title\", \"brand_name\"]]\n",
+      "Please enter the name of data cleaning tool: dboost\n",
+      "Please enter the proper parameter list: [\"gaussian\", \"2\"]\n",
       "The results have been written into the outputs/sample.csv\n",
       "--------------------------------------\n"
      ]
