A minor change commited.

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt]{article}
-\usepackage{sbc-template}
+\usepackage{attachments/sbc-template}
 \usepackage{tikz}
 \usepackage{listings}
 \usepackage{color}
